{
  "version": 4,
  "terraform_version": "1.6.1",
  "serial": 37,
  "lineage": "b3651c8c-903f-9f59-054b-ed6863d465b1",
  "resources": [
    {
      "module": "module.my_igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633166094506:internet-gateway/igw-0cb319f362957ce39",
            "id": "igw-0cb319f362957ce39",
            "owner_id": "633166094506",
            "vpc_id": "vpc-0cd050e4814b171dd"
          },
          "dependencies": [
            "module.my_vpc.aws_subnet.public_subnet",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_route_table",
      "mode": "managed",
      "type": "aws_route",
      "name": "my_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cb319f362957ce39",
            "id": "r-rtb-01be1816cbd33e4081080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01be1816cbd33e408",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_igw.aws_internet_gateway.my_igw",
            "module.my_route_table.aws_route_table.my_route_table",
            "module.my_vpc.aws_subnet.public_subnet",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633166094506:route-table/rtb-01be1816cbd33e408",
            "id": "rtb-01be1816cbd33e408",
            "owner_id": "633166094506",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb319f362957ce39",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cd050e4814b171dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_subnet.public_subnet",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c812f7c3d1c23041",
            "route_table_id": "rtb-01be1816cbd33e408",
            "subnet_id": "subnet-0fa675e3484e9b583"
          },
          "dependencies": [
            "module.my_route_table.aws_route_table.my_route_table",
            "module.my_vpc.aws_subnet.public_subnet",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04dd01169fe7fa43d",
            "route_table_id": "rtb-01be1816cbd33e408",
            "subnet_id": "subnet-0441cc0144f953d6f"
          },
          "dependencies": [
            "module.my_route_table.aws_route_table.my_route_table",
            "module.my_vpc.aws_subnet.public_subnet",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633166094506:subnet/subnet-0fa675e3484e9b583",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa675e3484e9b583",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633166094506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-0cd050e4814b171dd"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633166094506:subnet/subnet-0441cc0144f953d6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0441cc0144f953d6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "633166094506",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-0cd050e4814b171dd"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:633166094506:vpc/vpc-0cd050e4814b171dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04f42d2be196922ac",
            "default_route_table_id": "rtb-0da2aa06d53cad444",
            "default_security_group_id": "sg-06ae9fbe5344af07e",
            "dhcp_options_id": "dopt-01fa29845415acace",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cd050e4814b171dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da2aa06d53cad444",
            "owner_id": "633166094506",
            "tags": {
              "Name": "vpc-test"
            },
            "tags_all": {
              "Name": "vpc-test"
            }
          }
        }
      ]
    }
  ]
}